# test

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
admin_panel/: .dockerignore  .gitignore  README.md
admin_panel/movies_admin/: pyproject.toml
admin_panel/movies_admin/api/v1/: urls.py  views.py
admin_panel/movies_admin/config/: urls.py
admin_panel/movies_admin/config/settings/: base.py  dev.py  production.py
admin_panel/movies_admin/movies/: admin.py  apps.py  choices.py  managers.py  models.py
admin_panel/movies_admin/movies/management/commands/: delete_movie_catalog.py  generate_catalog.py
admin_panel/movies_admin/movies/migrations/: 0001_initial.py  0002_auto_20210617_1116.py  0003_auto_20210702_1629.py
admin_panel/movies_admin/requirements/: base.txt  dev.txt
admin_panel/schema_design/: schema.sql
admin_panel/sqlite_to_postgres/: load_data.py
api/: Makefile  pyproject.toml
api/src/: main.py
api/src/api/v1/: genre.py  person.py
api/src/services/: genre.py
api/tests/functional/: README.md  requirements.txt
docker/api/: Dockerfile
docker/django/: Dockerfile
docker/elastic/: Dockerfile
docker/etl/: Dockerfile
docker/nginx/: Dockerfile
docker/redis/: Dockerfile
docker/tmp/: dev.yml  production.yml
elt/: docker-compose.yml
elt/postgres_to_es/: README.md  config.py  es_schema_p.txt  example.env  logging.ini  sql_queries.py  state.py
etl/: setup.cfg
etl/postgres_to_es/: es_schema_f.txt  etl.py  (+3 more)
postman_test/: async_api_tests.postman_collection.json
src/: main.py
tests/: .dockerignore  setup.py
(+45 files in other folders)
