[tool.poetry]
name = "async_api_sprint_1"
version = "0.1.0"
description = ""
authors = ["ya.praktikum"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.66.0"
uvicorn = "^0.14.0"
elasticsearch = {extras = ["async"], version = "^7.13.3"}
aioredis = "^1.3.1"
orjson = "^3.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
