[tool.poetry]
name = "movies_admin"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "3.2.4"
django-model-utils = "4.1.1"
psycopg2-binary = "2.8.6"
python-dotenv = "0.18.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "^3.2.1"
django-extensions = "^3.1.3"
factory-boy = "^3.2.0"
ipython = "^7.25.0"
mixer = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
